Release Notes
=============

1.4.1
_____
o Clarify GroupServ help
o Allow services to run in background when using libevent
o Fix caller logic to db_execute_nonquery to properly check for errors
o Add GroupServ SET DESC
o Include GroupServ schema in install

1.4.0
-----
+ Nickname autojoin support
+ Groupserv support for group management of channels
+ New pass-through auth from ircd support so users can identify on join
o Process akills in a semi async way on startup to reduce burst time
o Change bopm lookups to use async dns

1.3.12
------
o Attempt to fix a bug causing services to crash when two clients connect at
once

1.3.11
------
o Allow ruby to delete events and deal with ts ids properly

1.3.10
------
o Set the new umode_service properly in uid introductions
o Allow remote services clients to deal with akills
o bopm related performance enhancements

1.3.9
-----
o Fix a bug causing arguments not to be parsed correctly when they had
options


1.3.8
-----
o Fix an infinite loop caused by trying to send mail to people with really
long hostnames
o Fix a bug in reconnecting to the database
o Add badserv to GanneffServ, a utility for nuking all connections on a given 
server
o Fix a bug causing description/entrymsg not to be cleared properly
o BOPM related fixes

1.3.7
-----
o Where did 1.3.7 go? o_O

1.3.6
------
o Fix a crash caused by trying to identify a user on certfp

1.3.5
-----
o Fix a critical bug causing a crash when trying to unlink a nick that had no
links
o Fix a critical bug causing a crash when trying to unlink nicks

1.3.4
-----
o Fix a bug in mlock setting.
o Fix a bug when attempting to unlink a non linked nick.
o Reinstate the masterless channel check.
o Fix chanserv info display
o Add the person who abused operserv RAW to the snote.
o Add a cache for akills so they dont need to be looked up lots.
o Add some more debugmod specific things.

1.3.3
-----
o Fix below bug properly.
o Sort akills by time set.
o Some GanneffServ Fixes.