@@ -68,6 +68,8 @@ int dbchannel_register(DBChannel *, Nickname *);
 int dbchannel_is_forbid(const char *);
 int dbchannel_masters_list(unsigned int, dlink_list *);
 void dbchannel_masters_list_free(dlink_list *);
+int dbchannel_group_masters_list(unsigned int, dlink_list *);
+void dbchannel_group_masters_list_free(dlink_list *);
 int dbchannel_masters_count(unsigned int, int *);
 int dbchannel_list_all(dlink_list *);
 void dbchannel_list_all_free(dlink_list *);
