@@ -207,6 +207,7 @@ enum db_queries
   INSERT_AJOIN,
   DELETE_AJOIN,
   GET_GROUPS_BY_ACCOUNT,
+  GET_CHAN_GROUP_MASTERS,
   QUERY_COUNT
 };
 
